--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Bake my day
+    <button><a href="https://leekyounghee.github.io/bakemyday">Bake my day</a></button>
 </body>
 </html>
